Fixed some more contrast bugs

--- a/style/banner-style.css
+++ b/style/banner-style.css
@@ -44,18 +44,24 @@ body
 	-o-border-radius: 10px;
 	padding: 10px;
 	
-	-webkit-transition: border-color .15s ease-in-out, background-color .15s ease-in-out;
-	-moz-transition: border-color .15s ease-in-out, background-color .15s ease-in-out;
-	-o-transition: border-color .15s ease-in-out, background-color .15s ease-in-out;
-	transition: border-color .15s ease-in-out, background-color .15s ease-in-out;
+	-webkit-transition: all .15s ease-in-out;
+	-moz-transition: all .15s ease-in-out;
+	-o-transition: all .15s ease-in-out;
+	transition: all .15s ease-in-out;
+	-webkit-filter: brightness(100%);
+	-moz-filter: brightness(100%);
+	-o-filter: brightness(100%);
+	filter: brightness(100%);
 	
 	cursor: pointer;
 }
 
 .scroll-button:hover
 {
-	border-color: rgb(96, 96, 96);
-	background-color: rgb(192, 192, 192);
+	-webkit-filter: brightness(75%);
+	-moz-filter: brightness(75%);
+	-o-filter: brightness(75%);
+	filter: brightness(75%);
 }
 
 
